<resources>
    <string name="app_name">Inventory App v2</string>

    <!--  Main  Fragment -->
    <string name="ean_or_ian">EAN/IAN code</string>
    <string name="product_name">Product name</string>
    <string name="product_category">Product category</string>
    <string name="product_save">Add new product</string>
    <string name="product_list">Product list</string>

    <!-- Product List Fragment-->
    <string name="back">Back</string>

    <!-- Nav graph -->
    <string name="labelFragmentProductList">Fragment Product List</string>
    <string name="labelFragmentAddNewProduct">Fragment Add New Product</string>

</resources>